# rambrain-uwp

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/: automate-vcpkg.cmake
rambrain_uwp/: rambrain_uwp.cpp  rambrain_uwp.vcxproj
src/: CMakeLists.txt  LockFreeListFinal.cpp  LockFreeListFinal.h  blocking_queue.h  c_interface.cpp  c_interface.h  common.h  configreader.cpp  configreader.h  cyclicManagedMemory.cpp  cyclicManagedMemory.h  export.h  genericManagedPtr.cpp  genericManagedPtr.h  managedDummySwap.cpp  managedDummySwap.h  managedFileSwap.cpp  managedFileSwap.h  managedMemory.cpp  managedMemory.h  managedMemoryChunk.h  managedPtr.h  managedSwap.cpp  managedSwap.h  rambrain_atomics.h  rambrainconfig.cpp  sync_win32.h  timer.cpp  timer.h
tests/: CMakeLists.txt  configTest.cpp  testCyclicManagedMemory.cpp  testManagedDummySwap.cpp  testManagedFileSwap.cpp  testManagedPtr.cpp  tester.cpp
